Return the state needed by the discussion UI